Fix spacing

--- a/style.css
+++ b/style.css
@@ -181,7 +181,7 @@ h1{
     h1{
         margin-top: 30px;
         margin-bottom: 70px;
-        font-size: 2.1rem;
+        font-size: 2rem;
         text-align: center;
     }
 
@@ -202,13 +202,21 @@ h1{
         font-size: 1.3rem;
     }
 
+    .rock{
+        margin-right: -40px;
+    }
+    
+    .scissors{
+        margin-left: -40px;
+    }
+
     .choices{
-        gap: 0;
-        padding: -20px;
+        gap: 0px;
+
     }
 
     .choices button{
-        font-size: 5.5rem;
+        font-size: 4.5rem;
     }
 }
 
@@ -238,6 +246,7 @@ h1{
     .choices{
         gap: 0px;
         padding: -10px;
+        white-space: normal;
     }
 
     .choices button{
